# omega-hard-print

./: pyproject.toml
omega_hard_print/: __init__.py  __main__.py  default.css  easy.py  graphs.py  md.py  parser.py  rendering.py  templating.py
omega_hard_print/markdown/: __init__.py  block_code.py  graphs.py  mist.py
omega_hard_print/rendering/: __init__.py  default.css
omega_hard_print/templates/: macros.jinja  table.html
samples/datadoc/: 01-intro.md  90-reference.md  data.yaml  style.css
samples/datadoc/30-installation/: 01-introduction.md
samples/datadoc/50-operations/: 01-introduction.md  backups.md
samples/demo/: demo.css  demo.md
samples/diy-report/: build.py  data.yaml  style.css
samples/diy-report/docs/: 01-intro.md  02-background.md
samples/named-page/: style.css  text.md
samples/one-page/: data.yaml  demo.html  readme.md  style.css
samples/report/: about.md  report.css  report.md
