[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omega-hard-print"
version = "0.3.1"
authors = [
  { name="Erik Bergsten", email="erikbergsten94@gmail.com" },
]
description = "Make PDFs from markdown"
requires-python = ">=3.8"
dependencies = [
  "weasyprint",
  "pygal",
  "pygments",
  "jinja2",
  "pyyaml",
  "python-frontmatter>=1.1.0",
  "mistune>=3.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
ohprint = "omega_hard_print.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["omega_hard_print"]
